--- a/res/layout/activity_profile_view.xml
+++ b/res/layout/activity_profile_view.xml
@@ -8,7 +8,8 @@
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent"
+        android:background="@color/rank5" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,121 +19,156 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="240dp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="22dp"
                 android:orientation="horizontal" >
-
-                <View
-                    android:id="@+id/rank_view"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:background="@color/rank1" />
 
                 <ImageView
                     android:id="@+id/user_image"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="22dp"
+                    android:layout_marginTop="22dp"
                     android:layout_weight="1"
                     android:scaleType="fitXY"
                     android:src="@drawable/mock_profile" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/profile_university"
-                android:layout_width="wrap_content"
+                android:id="@+id/profile_title"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:layout_marginTop="11dp"
+                android:text="User information"
+                android:textColor="#2B2B2B"
+                android:background="#99ffffff"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:background="#2B2B2B" />
+
+            <TextView
+                android:id="@+id/profile_university"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:layout_marginTop="5dp"
                 android:text="Universidad Autonoma De Aguas"
-                android:textColor="#ffffff"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="5dp"
                 android:text="mermelada.h.ruiz"
-                android:textColor="#ffffff"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="5dp"
                 android:text="Esmeralda Ruiz"
-                android:textColor="#ffffff"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_country"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="5dp"
                 android:text="Mexico"
-                android:textColor="#ffffff"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:layout_marginTop="5dp"
+                android:text="27 years."
+                android:textColor="#F0F0F0"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/profile_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:layout_marginTop="11dp"
-                android:text="27 years."
-                android:textColor="#ffffff"
+                android:text="Apprende score"
+                android:textColor="#2B2B2B"
+                android:background="#99ffffff"
                 android:textSize="16sp" />
 
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:background="#2B2B2B" />
+            
             <TextView
                 android:id="@+id/profile_pints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="5dp"
                 android:text="3512 points"
-                android:textColor="#ffffff"
+                android:textColor="#F0F0F0"
+                android:textSize="16sp" />
+            
+            <TextView
+                android:id="@+id/profile_plays"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp"
+                android:layout_marginTop="5dp"
+                android:text="1599 plays"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_BestOfYou"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
-                android:text="45 guys"
-                android:textColor="#ffffff"
+                android:layout_marginTop="5dp"
+                android:text="45 guys best of you"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/profile_BellowYou"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:layout_marginTop="11dp"
-                android:text="49 guys"
-                android:textColor="#ffffff"
+                android:layout_marginBottom="22dp"
+                android:text="49 guys bellow you"
+                android:textColor="#F0F0F0"
                 android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
