--- a/res/layout/activity_profile_view.xml
+++ b/res/layout/activity_profile_view.xml
@@ -23,14 +23,13 @@
 
                 <ImageView
                     android:id="@+id/user_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="300dp"
                     android:layout_marginLeft="22dp"
                     android:layout_marginRight="22dp"
                     android:layout_marginTop="22dp"
-                    android:layout_weight="1"
                     android:scaleType="fitXY"
-                    android:src="@drawable/mock_profile" />
+                    android:src="@drawable/mock" />
             </LinearLayout>
 
             <TextView
