--- a/res/layout/activity_registration_view.xml
+++ b/res/layout/activity_registration_view.xml
@@ -104,6 +104,7 @@
                 android:id="@+id/registration_finish"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="22dp"
                 android:layout_marginLeft="11dp"
                 android:layout_marginRight="11dp"
                 android:layout_marginTop="22dp"
