Added flow for questionary and renove view

--- a/res/layout/activity_login_view.xml
+++ b/res/layout/activity_login_view.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/login"
     android:gravity="center"
     android:orientation="vertical" >
 
@@ -24,8 +24,7 @@
         android:layout_marginBottom="22dp"
         android:layout_marginLeft="22dp"
         android:layout_marginRight="22dp"
-        android:layout_marginTop="11dp"
-        android:src="@drawable/logo_nuevo" />
+        android:layout_marginTop="11dp" />
 
     <EditText
         android:id="@+id/username_field"
