--- a/res/layout/splash_view.xml
+++ b/res/layout/splash_view.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/logo_nuevo" />
+        android:scaleType="fitXY"
+        android:src="@drawable/apprende_face" />
 
 </RelativeLayout>
