Make flow for get feeds

--- a/res/layout/activity_feed_view.xml
+++ b/res/layout/activity_feed_view.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -10,7 +11,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:layout_height="wrap_content"
-        android:background="#00aaff"
+        android:background="#9900aaff"
         android:orientation="vertical" >
 
         <TextView
