--- a/res/layout/activity_registration_view.xml
+++ b/res/layout/activity_registration_view.xml
@@ -108,7 +108,7 @@
                 android:layout_marginLeft="11dp"
                 android:layout_marginRight="11dp"
                 android:layout_marginTop="22dp"
-                android:background="@color/rank2"
+                android:background="#99000000"
                 android:textColor="#ffffff"
                 android:text="Done" />
         </LinearLayout>
