--- a/res/layout/splash_view.xml
+++ b/res/layout/splash_view.xml
@@ -14,4 +14,14 @@
         android:scaleType="fitXY"
         android:src="@drawable/apprende_face" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:layout_marginBottom="22dp"
+        android:text="PandaModile | 2014" />
+
 </RelativeLayout>
