--- a/res/layout/activity_login_view.xml
+++ b/res/layout/activity_login_view.xml
@@ -14,7 +14,7 @@
         android:layout_marginRight="22dp"
         android:textSize="18sp"
         android:gravity="right"
-        android:text=":D"
+        android:text=".i."
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
