--- a/res/layout/activity_profile_view.xml
+++ b/res/layout/activity_profile_view.xml
@@ -1,186 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_app"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/rank3" >
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/profile_view" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+    <ListView
+        android:id="@+id/guys_view_list"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#fafafa"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="2dp" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="240dp"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/user_image"
-                    android:layout_width="fill_parent"
-                    android:layout_height="300dp"
-                    android:layout_marginLeft="22dp"
-                    android:layout_marginRight="22dp"
-                    android:layout_marginTop="22dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/mock_es" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/profile_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
-                android:text="User information"
-                android:textColor="#2B2B2B"
-                android:background="#99ffffff"
-                android:textSize="16sp" />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:background="#2B2B2B" />
-
-            <TextView
-                android:id="@+id/profile_university"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="Universidad Autonoma De Aguas"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="mermelada.h.ruiz"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="Esmeralda Ruiz"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_facebook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="www.facebook.com/carlos.bedoy"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_twitter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="twitter"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-            
-            <TextView
-                android:id="@+id/profile_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="27 years."
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_title"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
-                android:text="Apprende score"
-                android:textColor="#2B2B2B"
-                android:background="#99ffffff"
-                android:textSize="16sp" />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:background="#2B2B2B" />
-            
-            <TextView
-                android:id="@+id/profile_pints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="3512 points"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-            
-            <TextView
-                android:id="@+id/profile_plays"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="1599 plays"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_BestOfYou"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="5dp"
-                android:text="45 guys best of you"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/profile_BellowYou"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginTop="11dp"
-                android:layout_marginBottom="22dp"
-                android:text="49 guys bellow you"
-                android:textColor="#F0F0F0"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
