--- a/res/menu/login_menu.xml
+++ b/res/menu/login_menu.xml
@@ -6,8 +6,7 @@
     <item
         android:id="@+id/action_registration"
         android:orderInCategory="100"
-        android:title="@string/action_registration"
-        app:showAsAction="never"/>
+        android:title="@string/action_registration"/>
 
 
 </menu>
