--- a/res/menu/profile_menu.xml
+++ b/res/menu/profile_menu.xml
@@ -6,13 +6,11 @@
     <item
         android:id="@+id/action_guys"
         android:orderInCategory="100"
-        android:title="@string/action_guys"
-        app:showAsAction="never"/>
+        android:title="@string/action_guys"/>
     
     <item
         android:id="@+id/action_course"
         android:orderInCategory="100"
-        android:title="@string/action_course"
-        app:showAsAction="never"/>
+        android:title="@string/action_course"/>
 
 </menu>
