--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -79,4 +79,14 @@
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Apprende</item>
     </style>
 
+    <style name="feed_animation">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
+
+    <style name="notification_animation">
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
+    </style>
+
 </resources>
