--- a/res/layout/app_preview_viewcontroller.xml
+++ b/res/layout/app_preview_viewcontroller.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="-96dp"
         android:layout_marginRight="-96dp"
         android:src="@drawable/theme_placeholder"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:id="@+id/app_preview_viewcontroller_background"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
