--- a/res/layout/app_singup_viewcontroller.xml
+++ b/res/layout/app_singup_viewcontroller.xml
@@ -7,12 +7,12 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:layout_marginLeft="-96dp"
         android:layout_marginRight="-96dp"
         android:id="@+id/app_singup_viewcontroller_background"
         android:layout_alignParentTop="true"
-        android:src="@drawable/white_blur"
+        android:src="@drawable/profile_blur"
         android:layout_centerHorizontal="true" />
 
     <View
@@ -72,7 +72,7 @@
             android:id="@+id/scrollView"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_above="@+id/button"
+            android:layout_above="@+id/app_singup_viewcontroller_confirm"
             android:layout_alignParentRight="true" >
 
             <LinearLayout
@@ -81,7 +81,8 @@
                 android:layout_height="fill_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_above="@+id/button">
+                android:layout_above="@+id/button"
+                android:id="@+id/">
 
                 <EditText
                     android:layout_width="match_parent"
