--- a/res/layout/app_login_viewcontroller.xml
+++ b/res/layout/app_login_viewcontroller.xml
@@ -21,8 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="username"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:background="#44000000"
         android:layout_marginTop="48dp"
         android:padding="6dp"
         android:textSize="20sp"
@@ -37,9 +38,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:padding="6dp"
+        android:background="#44000000"
         android:layout_marginTop="12dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:hint="password"
         android:textSize="20sp"
         android:textColor="#f0f0f0"
@@ -77,16 +79,31 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
+        android:background="#44000000"
         android:text="Apprende"
+        android:padding="6dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:textColor="#f0f0f0"
         android:textSize="34sp"
-        android:padding="6dp"
         android:id="@+id/app_login_viewcontroller_tittle"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current version"
+        android:textSize="14sp"
+        android:layout_marginTop="24dp"
+        android:textColor="#99f0f0f0"
+        android:id="@+id/currentVersion"
+        android:layout_below="@+id/app_login_viewcontroller_password"
+        android:layout_alignRight="@+id/app_login_viewcontroller_password" />
 
 
 </RelativeLayout>
