--- a/res/layout/app_notification_view.xml
+++ b/res/layout/app_notification_view.xml
@@ -20,7 +20,7 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:text="Accept"
         android:layout_marginBottom="24dp"
         android:layout_marginLeft="24dp"
@@ -46,7 +46,7 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:id="@+id/notification_image"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="24dp"
             android:src="@drawable/ic_launcher"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
@@ -55,7 +55,7 @@
             android:textColor="#f0f0f0"
             android:layout_marginTop="24dp"
             android:textSize="24sp"
-            android:padding="18dp"
+            android:padding="0dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
