--- a/res/layout/app_splash_view.xml
+++ b/res/layout/app_splash_view.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/background_splash"
     android:layout_width="match_parent"
     android:background="@color/rank5"
     android:layout_height="match_parent">
