--- a/res/layout/app_category_cell.xml
+++ b/res/layout/app_category_cell.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="144dp"
@@ -15,11 +17,25 @@
         android:id="@+id/app_category_cell_image"
         android:src="@drawable/login_blur"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:background="#99000000"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/app_category_cell_image">
+
+    </View>
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_height="wrap_content"
         android:text="Name of category"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textColor="#f0f0f0"
         android:id="@+id/app_category_cell_name"
         android:layout_centerVertical="true"
