--- a/res/layout/app_profile_viewcontroller.xml
+++ b/res/layout/app_profile_viewcontroller.xml
@@ -26,14 +26,11 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/app_profile_viewcontroller_avatar"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@drawable/profile_avatar"
-        app:border_width="2dp"
-        app:border_color="#66f0f0f0"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="60dp"
         android:layout_marginLeft="12dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
@@ -46,7 +43,7 @@
         android:textColor="#99f0f0f0"
         android:background="#1EBF6C"
         android:padding="12dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:layout_below="@+id/app_profile_viewcontroller_avatar"
         android:id="@+id/app_profile_viewcontroller_username"
         android:layout_centerHorizontal="true" />
@@ -64,7 +61,7 @@
             android:background="#99000000"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:text="Start to learn"
             android:id="@+id/app_profile_viewcontroller_start"
             android:layout_alignParentBottom="true"
@@ -129,7 +126,7 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:text="Share on Twitter"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
@@ -167,6 +164,13 @@
         android:layout_alignRight="@+id/app_profile_viewcontroller_points"
         android:layout_alignBottom="@+id/app_profile_viewcontroller_avatar"
         android:layout_toRightOf="@+id/app_profile_viewcontroller_avatar" />
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        layout="@layout/app_action_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
 
 </RelativeLayout>
