--- a/res/layout/app_category_viewcontroller.xml
+++ b/res/layout/app_category_viewcontroller.xml
@@ -2,11 +2,19 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#999999">
 
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        layout="@layout/app_action_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#f0f0f0"
         android:id="@+id/app_category_viewcontroller_list"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
