--- a/res/layout/app_subcategory_viewcontroller.xml
+++ b/res/layout/app_subcategory_viewcontroller.xml
@@ -4,13 +4,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#999999"
     android:layout_height="match_parent">
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        layout="@layout/app_action_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
 
     <GridView
+        android:background="#f0f0f0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/app_subcategory_viewcontroller_gridview"
-        android:numColumns="2"
+        android:numColumns="1"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
